# pypi-version-check

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  tests.yml
src/: changelog.rs  github_release.rs  main.rs  pypi.rs  pypoetry.rs  rust_cargo.rs
