[package]
name = "pypi-version-check"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
simple-error = "0.2"
structopt = "0.3"
tokio = {version = "1.14", features = ["macros", "rt-multi-thread"]}
toml = "0.5"
