[package]
name = "pypi-version-check"
version = "0.3.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/dbradf/pypi-version-check"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
regex = "1.4"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
simple-error = "0.2"
structopt = "0.3"
strum = "0.24"
strum_macros = "0.24"
tokio = {version = "1.14", features = ["macros", "rt-multi-thread"]}
toml = "0.5"
